syntax = "proto3";

option csharp_namespace = "gRPCServiceBasic.Protos";

package personpkg;

service Person{
	//Unary service
	rpc GetPersonById (PersonRequest) returns (PersonResponse);
	//Unary service async
	rpc GetPersonByIdAsync (PersonRequestAsync) returns (PersonResponseAsync);
	//Bi-Directional service
	rpc GetPersonByLastNameAsync (stream PersonByLastNameRequest) returns (stream PersonResponse);
}

message PersonRequest{
	int32 BusinessEntityID = 1;
}

message PersonRequestAsync{
	int32 BusinessEntityID = 1;
}

message PersonResponse{
	int32 BusinessEntityID = 1;
	string FirstName = 2;
	string LastName = 3;
}

message PersonResponseAsync{
	int32 BusinessEntityID = 1;
	string FirstName = 2;
	string LastName = 3;
}

message PersonByLastNameRequest{
	string LastName = 1;
}

